--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,400&display=swap");
 a, p, h1, h2, h3, h4, h5 {
   font-family: "Roboto", sans-serif;
+  text-decoration: none;
 }
 
 .row {
@@ -32,8 +33,9 @@ a, p, h1, h2, h3, h4, h5 {
 body {
   margin: 0;
   padding: 0;
-  color: #a1a3a9;
-  fill: #a1a3a9;
+  color: rgba(255, 255, 255, 0.6);
+  fill: rgba(255, 255, 255, 0.6);
+  font-size: 18px;
 }
 
 header {
@@ -63,11 +65,47 @@ header .nav .hamburger-menu {
   height: 52px;
   padding: 20px;
   margin-left: -10px;
+  cursor: pointer;
 }
 
 header .nav .hamburger-menu .line {
   width: 18px;
   height: 2px;
   background-color: rgba(255, 255, 255, 0.6);
+}
+
+header .nav .logo-container {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 162px;
+  height: 62px;
+  cursor: pointer;
+}
+
+header .nav .logo-container svg {
+  width: inherit;
+  height: 48px;
+  padding-bottom: 14px;
+}
+
+header .nav .nav-links, header .nav .nav-links-kids {
+  font-weight: 500;
+  padding: 20px 15px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+header .nav .nav-links:hover, header .nav .nav-links-kids:hover {
+  color: #F9F9F9;
+}
+
+header .nav .nav-links-kids {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 90px;
+  height: 55px;
+}
+
+header .nav .nav-links-kids svg {
+  padding-right: 20px;
 }
 /*# sourceMappingURL=main.css.map */
