--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,400&display=swap');
 
 $bg-color: #0d111c;
-$fill-color: rgba(255, 255, 255, 0.6);
-$text-color: rgba(255, 255, 255, 0.8);
+$fill-color: rgba(255,255,255,0.6);
+$text-color: rgba(255,255,255,0.8);
 $hover-color: #F9F9F9;
 $font-family: 'Roboto', sans-serif;
 $font-size: 18px;
@@ -42,7 +42,10 @@ header{
         height: 66px;
         margin-top: 6px;
         padding: 0 50px;
-        // Hamburger menu properties
+        justify-content: space-between;
+        // left end content style navbar
+        .left-container{
+            // Hamburger menu properties
         .hamburger-menu{
             box-sizing: border-box;
             justify-content: space-between;
@@ -87,5 +90,35 @@ header{
                 padding-right: 20px;
             }
         }
+        }
+        // right end content style navbar
+        .right-container{
+            .search{
+                width: 240px;
+                height: 32px;
+                justify-content: space-between;
+                border-bottom: 1px solid $fill-color;
+                .nav-search-input{
+                    outline: none;
+                    background: none;
+                    border: none;
+                    font-size: inherit;
+                    caret-color: $fill-color;
+                    color: $fill-color;
+                    }
+                    &:focus-within {
+                        width: 340px;
+                        border-bottom: 1px solid #1f80e0;
+                }
+                input::-webkit-input-placeholder{
+                    color: $text-color;
+                    font-size: 16px;
+                    font-weight: 500;
+                }
+                }
+                
+                
+            }
+            
     }
 }
