--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -45,6 +45,31 @@ header {
   background-color: #0d111c;
   width: 100%;
   height: 72px;
+  /*Navbar css*/
+}
+
+header .dropdown {
+  font-weight: 400;
+  font-size: 14px;
+  position: absolute;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  top: 55px;
+  left: 0;
+  display: none;
+  background-color: #1f2742;
+  border-radius: 4px;
+}
+
+header .dropdown li {
+  padding: 10px 20px;
+}
+
+header .dropdown li:hover {
+  background-color: #0d111c;
+  -webkit-transition: width 2s;
+  transition: width 2s;
 }
 
 header .nav {
@@ -77,6 +102,14 @@ header .nav .left-container .hamburger-menu .line {
   background-color: rgba(255, 255, 255, 0.6);
 }
 
+header .nav .left-container .hamburger-menu .dropdown {
+  left: 50px;
+}
+
+header .nav .left-container .hamburger-menu:hover > .dropdown {
+  display: block;
+}
+
 header .nav .left-container .logo-container {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -92,6 +125,7 @@ header .nav .left-container .logo-container svg {
 }
 
 header .nav .left-container .nav-links, header .nav .left-container .nav-links-kids {
+  position: relative;
   font-weight: 500;
   padding: 20px 15px;
   color: rgba(255, 255, 255, 0.8);
@@ -99,6 +133,10 @@ header .nav .left-container .nav-links, header .nav .left-container .nav-links-k
 
 header .nav .left-container .nav-links:hover, header .nav .left-container .nav-links-kids:hover {
   color: #F9F9F9;
+}
+
+header .nav .left-container .nav-links:hover > .dropdown, header .nav .left-container .nav-links-kids:hover > .dropdown {
+  display: block;
 }
 
 header .nav .left-container .nav-links-kids {
