--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,400&display=swap');
 
 $bg-color: #0d111c;
+$dpd-color: #1f2742;
 $fill-color: rgba(255,255,255,0.6);
 $text-color: rgba(255,255,255,0.8);
 $hover-color: #F9F9F9;
@@ -39,14 +40,31 @@ header{
     background-color: $bg-color;
     width: 100%;
     height: 72px;
-    // Navbar css
+    .dropdown{
+        font-weight: 400;
+        font-size: 14px;
+        position: absolute;
+        width: max-content;
+        top: 55px;
+        left: 0;
+        display: none;
+        background-color: $dpd-color;
+        border-radius: $round-corners;
+        li{
+            padding: 10px 20px;
+            &:hover{
+                background-color: #0d111c;
+                transition: width 2s;
+            }
+        }
+    }
+    /*Navbar css*/
     .nav{
         box-sizing: border-box;
         height: 66px;
         margin-top: 6px;
         padding: 0 50px;
         justify-content: space-between;
-        // left end content style navbar
         .left-container{
             // Hamburger menu properties
         .hamburger-menu{
@@ -62,6 +80,12 @@ header{
                 height: 2px;
                 background-color: $fill-color;
             }
+            .dropdown{
+                left: 50px;
+            }
+            &:hover > .dropdown{
+                display: block;
+            }
         }
         // hotstar logo styles
         .logo-container{
@@ -72,18 +96,23 @@ header{
                 svg{
                     width: inherit;
                     height: 48px;
-                padding-bottom: 14px;
-                    
+                    padding-bottom: 14px;
                 }
         }
         .nav-links{
+            position: relative;
             font-weight: 500;
             padding: 20px 15px;
             color: $text-color;
             &:hover{
                 color: $hover-color;
             }
+            
+            &:hover > .dropdown{
+                display: block;
+            }
         }
+        
         .nav-links-kids{
             @extend .nav-links;
             box-sizing: border-box;
