--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,400&display=swap");
+@media screen and (max-width: 900px) {
+  .nav-links, header .nav .left-container .nav-links-kids {
+    display: none;
+  }
+}
+
 a, p, h1, h2, h3, h4, h5 {
   font-family: "Roboto", sans-serif;
   text-decoration: none;
@@ -43,6 +49,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 13;
   background-color: #0d111c;
   width: 100%;
   height: 72px;
@@ -58,6 +65,7 @@ header .dropdown {
   width: max-content;
   top: 55px;
   left: 0;
+  z-index: 913;
   display: none;
   background-color: #161c30;
   border-radius: 4px;
@@ -220,10 +228,11 @@ header .nav .right-container a {
 .carousel {
   position: relative;
   margin-top: 72px;
-  height: 566px;
+  max-height: 566px;
   background-color: #0d111c;
   padding: 0 40px;
   cursor: pointer;
+  z-index: 1;
 }
 
 .carousel:hover > .navigation {
@@ -271,8 +280,8 @@ header .nav .right-container a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  height: 562px;
-  padding: 0 10px;
+  max-height: 562px;
+  padding: 0;
   background-color: #090c14;
   border-radius: 10px;
 }
@@ -325,21 +334,44 @@ header .nav .right-container a {
 }
 
 .carousel .card .right-image {
+  position: relative;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-box-flex: 6;
       -ms-flex: 6;
           flex: 6;
-  background: url("../assets/images/rk.jpg");
-  background-size: cover;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.carousel .card .right-image img {
+  width: 100%;
+  max-width: 100%;
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
 }
 
 .carousel .card .right-image .gradient {
-  width: 200px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 30%;
   height: 100%;
+  max-width: 100%;
   background-image: -webkit-gradient(linear, left top, right top, from(#090c14), to(rgba(0, 0, 0, 0)));
   background-image: linear-gradient(to right, #090c14, rgba(0, 0, 0, 0));
+}
+
+@media screen and (max-width: 1200px) {
+  .carousel .card .left-title {
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 10%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    font-size: 16px;
+    z-index: 12;
+  }
 }
 /*# sourceMappingURL=main.css.map */
