--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -48,259 +48,5 @@ body{
     font-size: $font-size;
     background-color: $bg-color;
 }
-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 13;
-    background-color: $bg-color;
-    width: 100%;
-    height: 72px;
-    .dropdown{
-        font-weight: 400;
-        font-size: 14px;
-        position: absolute;
-        width: max-content;
-        top: 55px;
-        left: 0;
-        z-index: 913;
-        display: none;
-        background-color: $dpd-color;
-        border-radius: $round-corners;
-        li{
-            padding: 10px 20px;
-            &:hover{
-                background-color: #0d111c;
-                transition: width 2s;
-            }
-        }
-    }
-    /*Navbar css*/
-    .nav{
-        box-sizing: border-box;
-        height: 66px;
-        margin-top: 6px;
-        padding: 0 50px;
-        justify-content: space-between;
-        .left-container{
-            // Hamburger menu properties
-        .hamburger-menu{
-            box-sizing: border-box;
-            justify-content: space-between;
-            width: 58px;
-            height: 52px;
-            padding: 20px;
-            margin-left: -10px;
-            cursor: pointer;
-            .line{
-                width: 18px;
-                height: 2px;
-                background-color: $fill-color;
-            }
-            .dropdown{
-                left: 50px;
-            }
-            &:hover > .dropdown{
-                display: block;
-            }
-        }
-        // hotstar logo styles
-        .logo-container{
-            box-sizing: border-box;
-            width: 162px;
-            height: 62px;
-            cursor: pointer;
-                svg{
-                    width: inherit;
-                    height: 48px;
-                    padding-bottom: 14px;
-                }
-        }
-        .nav-links{
-            position: relative;
-            font-weight: 500;
-            padding: 20px 15px;
-            color: $text-color;
-            &:hover{
-                color: $hover-color;
-            }
-            
-            &:hover > .dropdown{
-                display: block;
-            }
-        }
-        
-        .nav-links-kids{
-            @extend .nav-links;
-            box-sizing: border-box;
-            width:90px;
-            height: 55px;
-            svg{
-                padding-right: 20px;
-            }
-        }
-        }
-        // right end content style navbar
-        .right-container{
-            height: 62px;
-            .search{
-                width: 240px;
-                height: 32px;
-                justify-content: space-between;
-                border-bottom: 1px solid $fill-color;
-                transition: all 200ms;
-                .nav-search-input{
-                    outline: none;
-                    background: none;
-                    border: none;
-                    font-size: inherit;
-                    caret-color: $fill-color;
-                    color: $fill-color;
-                    transition: all 200ms;
-                    }
-                    &:focus-within {
-                        width: 340px;
-                        border-bottom: 1px solid $alt-color;
-                        transition: all 200ms;
-                   }
-                input::-webkit-input-placeholder{
-                    color: $text-color;
-                    font-size: 16px;
-                    font-weight: 500;
-                }
-                span{
-                    width: 16px;
-                    align-self: center;
-                }
-            }
-            .btn-subscribe{
-                background-color: $alt-color;
-                color: $text-color;
-                border-radius: $round-corners;
-                border: none;
-                font-weight: 700;
-                cursor: pointer;
-                font-family: $font-family;
-                margin: 15px 0 15px 20px;
-                padding: 0 12px;
-                height: 24px;
-            }
-            a{
-                font-weight: 500;
-                padding: 13px 0;
-                margin-left: 15px;
-                color: $text-color;
-            }
-        }
-            
-    }
-}
-.carousel{
-    position: relative;
-    margin-top: 72px;
-    max-height: 566px;
-    background-color: $bg-color;
-    padding: 0 40px;
-    cursor: pointer;
-    z-index: 1;
-    &:hover > .navigation{
-        display: block;
-    }
-    .navigation{
-        position: absolute;
-        display: none;
-        width: 100%;
-        margin: 0 -40px;
-        height: 100%;
-        
-        button{
-            background: none;
-            border: none;
-            color: $fill-color;
-            font-size: 2em;
-            font-weight: 700;
-            cursor: pointer;
-        }
-        .left-arrow{
-            position: absolute;
-            top: 50%;
-            left: 5px;
-            transform: translateY(-50%)
-        }
-        .right-arrow{
-            position: absolute;
-            right: 5px;
-            top: 50%;
-            transform: translateY(-50%)
-        }
-    }
-        .card{
-            @include row;
-            max-height: 562px;
-            padding: 0;
-            background-color: $cars-bg-color;
-            border-radius: $round-corners-large;
-            .left-title{
-                flex: 4;
-                @include row;
-                justify-content: flex-end;
-                padding-right: 10%;
-                align-items: center;
-                .title-card{
-                    width: 90%;
-                    height: fit-content;
-                    padding-right: 10px;
-                    h1{
-                        font-size: 2em;
-                        font-weight: 700;
-                        color: white;
-                        line-height: 54px;
-                    }
-                    h2{
-                        font-size: 1.125em;
-                        padding-top: 10px;
-                        line-height: 41px;
-                    }
-                    p{
-                        font-size: 1.125em;
-                        padding-top: 10px;
-                        line-height: 1.5em;
-                    }
-                }
-            }
-            .right-image{
-                position: relative;
-                box-sizing: border-box;
-                flex: 6;
-                border-bottom-right-radius: $round-corners-large;
-                border-top-right-radius: $round-corners-large;
-                img{
-                    width: 100%;
-                   max-width: 100%;
-                    border-bottom-right-radius: $round-corners-large;
-                    border-top-right-radius: $round-corners-large;
-                }
-                .gradient{
-                    position: absolute;
-                    left: 0;
-                    top: 0;
-                    width: 30%;
-                    height: 100%;
-                    max-width: 100%;
-                    background-image: linear-gradient(to right, $cars-bg-color, rgba(0,0,0,0));
-                }
-            }
-            @media  screen and (max-width: 1200px) {
-                .left-title{
-                    position: absolute;
-                    display: block;
-                    top: 50%;
-                    left: 10%;
-                    transform: translateY(-50%);
-                    font-size: 16px;
-                    z-index: 12;
-                }
-            }
-            
-        }
-}
+@import "./header";
+@import "./banner";
