--- a/public/stylesheets/_banner.scss
+++ b/public/stylesheets/_banner.scss
@@ -80,6 +80,7 @@
                 img{
                     width: 100%;
                    max-width: 100%;
+                   max-height: 100%;
                     border-bottom-right-radius: $round-corners-large;
                     border-top-right-radius: $round-corners-large;
                 }
