--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -43,6 +43,7 @@ body {
   fill: rgba(255, 255, 255, 0.6);
   font-size: 18px;
   background-color: #0d111c;
+  overflow-x: hidden;
 }
 
 header {
@@ -347,6 +348,7 @@ header .nav .right-container a {
 .carousel .card .right-image img {
   width: 100%;
   max-width: 100%;
+  max-height: 100%;
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -373,5 +375,137 @@ header .nav .right-container a {
     font-size: 16px;
     z-index: 12;
   }
+}
+
+.show-tray-list {
+  position: relative;
+  padding: 15px 0 45px 0;
+  margin-left: 40px;
+}
+
+.show-tray-list .header-wrapper {
+  z-index: 2;
+  margin-top: 30px;
+}
+
+.show-tray-list .header-wrapper h1 {
+  line-height: 40px;
+  font-size: 1.5em;
+  font-weight: 700;
+  color: white;
+}
+
+.show-tray-list .show-list {
+  position: relative;
+  margin: -40px 0 10px 0;
+  padding-top: 55px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  overflow-x: auto;
+  height: 350px;
+  z-index: 2;
+}
+
+.show-tray-list .show-list::-webkit-scrollbar {
+  display: none;
+}
+
+.show-tray-list .show-list .thumbnail-container {
+  padding-bottom: 5px;
+  position: relative;
+  margin-right: 10px;
+  border-radius: 4px;
+}
+
+.show-tray-list .show-list .thumbnail-container .thumbnail {
+  width: 220px;
+  cursor: pointer;
+}
+
+.show-tray-list .show-list .thumbnail-container .thumbnail img {
+  width: inherit;
+  border-radius: 4px;
+}
+
+.show-tray-list .show-list .thumbnail-container .thumbnail .details {
+  display: none;
+}
+
+.show-tray-list .show-list .thumbnail-container .thumbnail:hover > img {
+  z-index: 9;
+  width: 290px;
+  position: absolute;
+  left: 0;
+  top: -47px;
+  border-radius: 4px;
+}
+
+.show-tray-list .show-list .thumbnail-container .thumbnail:hover > .details {
+  padding: 15px;
+  display: block;
+  position: absolute;
+  bottom: 10px;
+  width: 260px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  border-radius: 4px;
+  left: 0;
+  z-index: 10;
+  color: white;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#212b4600), to(#212b46));
+  background-image: linear-gradient(#212b4600, #212b46);
+}
+
+.show-tray-list .show-list .thumbnail-container .thumbnail:hover > .details h3 {
+  font-weight: 700;
+  line-height: 20px;
+  font-size: 18px;
+}
+
+.show-tray-list .show-list .thumbnail-container .thumbnail:hover > .details h4 {
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.show-tray-list .show-list .thumbnail-container .thumbnail:hover > .details p {
+  padding-top: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+  line-height: 20px;
+}
+
+.show-tray-list .show-list .thumbnail-container .thumbnail:hover > .details .btn {
+  margin-top: 10px;
+  background: none;
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 700;
+  padding: 5px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: none;
+  cursor: pointer;
+}
+
+.show-tray-list .show-list .thumbnail-container .thumbnail:hover > .details .btn:hover {
+  background-color: #0d111c;
 }
 /*# sourceMappingURL=main.css.map */
