--- a/public/stylesheets/_variables.scss
+++ b/public/stylesheets/_variables.scss
@@ -3,6 +3,7 @@
 $bg-color: #0d111c;
 $dpd-color: #161c30;
 $cars-bg-color: #090c14;
+$logo-bg-color: #192133;
 $fill-color: rgba(255,255,255,0.6);
 $text-color: rgba(255,255,255,0.8);
 $hover-color: #F9F9F9;
